test/programs/good/typechecker/measr_1.lq
main :: Bit
main = measr (new @1)
