test/programs/bad/typechecker/measr_1.lq
main :: Bit
main = measr a
